err/django-wepay.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/build'...
Listing './lib/python3.5/site-packages/build/lib'...
Listing './lib/python3.5/site-packages/build/lib/wepay'...
Listing './lib/python3.5/site-packages/build/lib/wepay/calls'...
Listing './lib/python3.5/site-packages/build/lib/wepay/tests'...
Listing './lib/python3.5/site-packages/django_wepay-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/djwepay'...
Compiling './lib/python3.5/site-packages/djwepay/api.py'...
***   File "./lib/python3.5/site-packages/djwepay/api.py", line 226
    except WePayError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djwepay/backends'...
Compiling './lib/python3.5/site-packages/djwepay/backends/default.py'...
***   File "./lib/python3.5/site-packages/djwepay/backends/default.py", line 272
    except WePayError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djwepay/forms.py'...
***   File "./lib/python3.5/site-packages/djwepay/forms.py", line 16
    except ValueError, exc:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djwepay/management'...
Listing './lib/python3.5/site-packages/djwepay/management/commands'...
Compiling './lib/python3.5/site-packages/djwepay/management/commands/refresh.py'...
***   File "./lib/python3.5/site-packages/djwepay/management/commands/refresh.py", line 24
    print "Unrecognized object name: %s " % obj_name
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djwepay/templatetags'...
Compiling './lib/python3.5/site-packages/djwepay/tests.py'...
***   File "./lib/python3.5/site-packages/djwepay/tests.py", line 91
    except App.DoesNotExist, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djwepay/views.py'...
***   File "./lib/python3.5/site-packages/djwepay/views.py", line 47
    except WePayError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_wepay-1.5.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wepay'...
Listing './lib/python3.5/site-packages/wepay/calls'...
Listing './lib/python3.5/site-packages/wepay/tests'...
Listing './share'...
Listing './share/python-wheels'...
